# mindful-jira

./: .gitignore  Cargo.toml  README.md  install  jira-config.json.example  justfile
src/: app.rs  config.rs  github.rs  jira.rs  main.rs  notes.rs  ui.rs
