[package]
name = "my-jira-work"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
