[package]
name = "mindful-jira"
version = "1.2.0"
edition = "2021"
authors = ["Jens Bech-Sørensen"]
license = "MIT"
description = "A terminal UI for viewing and managing your Jira issues"
repository = "https://git.bechsor.no/jens/mindful-jira"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
strip = true
